--- a/Index.html
+++ b/Index.html
@@ -1,2 +1,35 @@
-# Cloud
-High Cloud Coverage | Medium Cloud Coverage Simulation
+<!DOCTYPE html>
+<html>
+<body style="background-color:black;">
+<title>HTML Video CLoud</title>
+<h2><center><p style="color:white">Video Clips</p></center></h2>
+
+<table style="width:100%">
+   <tr>
+    <th><div align="left" style="border:1px solid red"><p style="color:white">Physics-based [8]</p></div></th>
+    <th><div align="left" style="border:1px solid red"><p style="color:white">Proposed with Perspective Correction</p></div></th>
+    <th><div align="left" style="border:1px solid red"><p style="color:white">Proposed without P-Correction</p></div></th>
+   </tr>
+
+   <tr>
+    <h2 style = "color: white"> Row-wise: High Cloud Coverage | Medium Cloud Coverage </h2><p style="color:white"> Visualised with Mozilla Firefox, else, please download the videos -<a href= "/CloudProject/Graphics.zip"> Zip file -</a>. </p>
+
+    <td><video controls loop><source src="https://raw.githubusercontent.com/ardisdataset/Cloud/master/BaseMethod_HighCloudCoverage.mp4" type="video/mp4"></td>
+    <td><video controls loop><source src="https://raw.githubusercontent.com/ardisdataset/Cloud/master/MachineLearning_PerspectiveCorrection_HighCloudCoverage.mp4" type="video/mp4"></td>
+    <td><video controls loop><source src="https://raw.githubusercontent.com/ardisdataset/Cloud/master/MachineLearning_NoPerspectiveCorrection_HighCloudCoverage.mp4" type="video/mp4"></video></td>
+   
+   </tr>
+
+   <tr>
+    <td><video controls loop><source src="https://raw.githubusercontent.com/ardisdataset/Cloud/master/BaseMethod_MediumCloudCoverage.mp4" type="video/mp4"></td>
+    <td><video controls loop><source src="https://raw.githubusercontent.com/ardisdataset/Cloud/master/MachineLearning_PerspectiveCorrection_MediumCloudCoverage.mp4" type="video/mp4"></td>
+    <td><video controls loop><source src="https://raw.githubusercontent.com/ardisdataset/Cloud/master/MachineLearning_NoPerspectiveCorrection_MediumCloudCoverage.mp4" type="video/mp4"></video></td>
+   
+   </tr>
+ 
+
+</table>
+
+
+</body>
+</html>
