--- a/index.html
+++ b/index.html
@@ -1,5 +1,28 @@
 <!DOCTYPE html>
 <html>
+   <style>
+a:link {
+  color: green;
+  background-color: transparent;
+  text-decoration: none;
+}
+a:visited {
+  color: pink;
+  background-color: transparent;
+  text-decoration: none;
+}
+a:hover {
+  color: red;
+  background-color: transparent;
+  text-decoration: underline;
+}
+a:active {
+  color: yellow;
+  background-color: transparent;
+  text-decoration: underline;
+}
+</style>
+   
 <body style="background-color:black;">
 <title>HTML Video CLoud</title>
 <h2><center><p style="color:white">Video Clips</p></center></h2>
