--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ a:active {
 </style>
    
 <body style="background-color:black;">
-<title>HTML Video CLoud</title>
+<title> Video CLoud</title>
 <h2><center><p style="color:white">Video Clips</p></center></h2>
 
 <table style="width:100%">
