--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@ a:active {
    </tr>
 
    <tr>
-    <h2 style = "color: white"> Row-wise: High Cloud Coverage | Medium Cloud Coverage </h2><p style="color:white"> Visualised with Mozilla Firefox, else, please download the videos -<a href= "https://raw.githubusercontent.com/ardisdataset/Cloud/master/Graphics.zip"> Zip file -</a>. </p>
-
+    <h2 style = "color: white"> Row-wise: High Cloud Coverage | Medium Cloud Coverage </h2><p style="color:white"> Visualised with Mozilla Firefox, else, please download the videos -<a href= "https://raw.githubusercontent.com/ardisdataset/Cloud/master/Graphics.zip"> Zip file -</a>.
+     |  <a href="https://github.com/ARDISDataset"> GitHome </a>
     <td><video controls loop><source src="https://raw.githubusercontent.com/ardisdataset/Cloud/master/BaseMethod_HighCloudCoverage.mp4" type="video/mp4"></td>
     <td><video controls loop><source src="https://raw.githubusercontent.com/ardisdataset/Cloud/master/MachineLearning_PerspectiveCorrection_HighCloudCoverage.mp4" type="video/mp4"></td>
     <td><video controls loop><source src="https://raw.githubusercontent.com/ardisdataset/Cloud/master/MachineLearning_NoPerspectiveCorrection_HighCloudCoverage.mp4" type="video/mp4"></video></td>
