--- a/index.html
+++ b/index.html
@@ -50,6 +50,21 @@ a:active {
    
    </tr>
  
+   
+   <tr>
+    <h2 style = "color: white"> Row-wise: High Cloud Coverage | Medium Cloud Coverage </h2>
+    <td><img src="https://raw.githubusercontent.com/ardisdataset/Cloud/master/BMH.png"></td>
+    <td><img src="https://raw.githubusercontent.com/ardisdataset/Cloud/master/NPCH.png"></td>
+    <td><img src="https://raw.githubusercontent.com/ardisdataset/Cloud/master/PCH.png"></td>
+   
+   </tr>
+
+   <tr>
+    <td><img src="https://raw.githubusercontent.com/ardisdataset/Cloud/master/BMM.png"></td>
+    <td><img src="https://raw.githubusercontent.com/ardisdataset/Cloud/master/NPCM.png"></td>
+    <td><img src="https://raw.githubusercontent.com/ardisdataset/Cloud/master/PCM.png"></td>
+   
+   </tr>
 
 </table>
 
