--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@ a:active {
     <td><video controls loop><source src="https://raw.githubusercontent.com/ardisdataset/Cloud/master/MachineLearning_NoPerspectiveCorrection_MediumCloudCoverage.mp4" type="video/mp4"></video></td>
    
    </tr>
- 
+ </table>
    
+   
+  <table style="width:100%"> 
    <tr>
     <h2 style = "color: white"> Row-wise: High Cloud Coverage | Medium Cloud Coverage </h2>
     <td><img src="https://raw.githubusercontent.com/ardisdataset/Cloud/master/BMH.png"></td>
